--- a/system/code/fileio/Makefile
+++ b/system/code/fileio/Makefile
@@ -3,7 +3,7 @@
 
 include ../Makefile.inc
 
-all : copy min_fd seek_io tee copy_ex bad_open mt_append
+all : copy min_fd seek_io tee copy_ex bad_open mt_append append atomic_append dup rwv
 
 copy : copy.cpp
 	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
@@ -26,6 +26,18 @@ bad_open : bad_exclude_open.cpp
 mt_append : mt_append.cpp
 	${CC} ${CCFLAGS} ${THREAD_FLAGS} -o $@ $< ${TLPI_LIB}
 
+append : append.cpp
+	${CC} ${CCFLAGS} ${THREAD_FLAGS} -o $@ $< ${TLPI_LIB}
+
+atomic_append : atomic_append.cpp
+	${CC} ${CCFLAGS} ${THREAD_FLAGS} -o $@ $< ${TLPI_LIB}
+
+dup : dup.cpp
+	${CC} ${CCFLAGS} ${THREAD_FLAGS} -o $@ $< ${TLPI_LIB}
+
+rwv : readv_writev.cpp
+	${CC} ${CCFLAGS} ${THREAD_FLAGS} -o $@ $< ${TLPI_LIB}
+
 .PHONY : clean
 clean:
-	${RM} copy min_fd seek_io tee copy_ex bad_open mt_append
+	${RM} copy min_fd seek_io tee copy_ex bad_open mt_append append atomic_append dup rwv
