chapter 7(memory alloc) practice debug

--- a/system/code/memalloc/Makefile
+++ b/system/code/memalloc/Makefile
@@ -3,12 +3,17 @@
 
 include ../Makefile.inc
 
-all : sbrk
+all : sbrk libmalloc.a
 
 sbrk : sbrk.cpp
 	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
 
+libmalloc.a : malloc.cpp
+	${CC} -c ${CCFLAGS} -o malloc.o $<
+	${RM} $@
+	${AR} rs $@ malloc.o
+
 .PHONY : clean
 clean:
-	${RM} sbrk
+	${RM} sbrk malloc.o libmalloc.a
 
