chapter8(users) makefile create

--- a/system/code/Makefile
+++ b/system/code/Makefile
@@ -4,7 +4,8 @@
 DIRS = lib \
 	   fileio \
 	   proc \
-	   memalloc
+	   memalloc \
+	   users
 
 all :
 	@ for dir in ${DIRS}; do (cd $${dir}; ${MAKE}); done
