--- a/system/code/Makefile.inc
+++ b/system/code/Makefile.inc
@@ -3,9 +3,12 @@
 O_DIR=..
 INC_DIR=${O_DIR}/lib
 MALLOC_DIR=${O_DIR}/memalloc
+UG_LOOKUP_DIR=${O_DIR}/users
+
 LIB_DIR=${O_DIR}
 TLPI_LIB=${O_DIR}/libtlpi.a
 MALLOC_LIB=${O_DIR}/libmalloc.a
+UG_LOOKUP_LIB=${O_DIR}/libug_lookup.a
 
 LINK_LIBRT=lrt
 LINK_LIBDL=ldl
@@ -18,6 +21,12 @@ CCFLAGS = -std=c++11 \
         -g -I${INC_DIR} \
         -Wall \
         -W
+
+CCFLAGS_NOWARN = -std=c++11 \
+        -g -I${INC_DIR}
+
+W_NO_INITIALIZE = -Wunused-but-set-variable
+W_UNUSED_PARAMETER = -Wunused-parameter
 
 # for gdb debug info.
 OPT_DEBUG = -gstabs+
