--- a/system/code/proc/Makefile
+++ b/system/code/proc/Makefile
@@ -7,7 +7,7 @@ all : mem_segment link_argv show_env modify_env longjmp jmp_vars jmp_vars_o \
 	jmp_return environ
 
 mem_segment : mem_segment.cpp
-	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
+	${CC} ${CCFLAGS_NOWARN} -o $@ $< ${TLPI_LIB}
 
 link_argv : link_argv0.cpp
 	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
@@ -20,7 +20,7 @@ modify_env : modify_env.cpp
 	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
 
 longjmp : longjmp.cpp
-	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
+	${CC} ${CCFLAGS_NOWARN} -o $@ $< ${TLPI_LIB}
 
 jmp_vars : jmp_vars.cpp
 	${CC} ${CCFLAGS} -o $@ $< ${TLPI_LIB}
